crates/simplex/tests/ui/dual_currency_deposit.stderr
warning: unreachable expression
 --> tests/ui/dual_currency_deposit.rs:3:1
  |
3 | include_simf!("../../../../crates/core/tests/ui/dual_currency_deposit.simf");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | unreachable expression
  | any code following this expression is unreachable
  |
  = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default
  = note: this warning originates in the macro `include_simf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/dual_currency_deposit.rs:3:1
  |
3 | include_simf!("../../../../crates/core/tests/ui/dual_currency_deposit.simf");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[u8; 64]`, found `!`
  |
  = note: expected enum `simplicityhl::either::Either<simplicityhl::either::Either<simplicityhl::either::Either<(u64, u64, u64, u64), (u64, u64, bool)>, (u64, [u8; 64], u64, u64, bool)>, simplicityhl::either::Either<simplicityhl::either::Either<(bool, u64, u64), (bool, u64, u64)>, ()>>`
             found enum `simplicityhl::either::Either<simplicityhl::either::Either<simplicityhl::either::Either<(u64, u64, u64, u64), (u64, u64, bool)>, (u64, !, u64, u64, bool)>, simplicityhl::either::Either<simplicityhl::either::Either<(bool, u64, u64), (bool, u64, u64)>, ()>>`
  = note: this error originates in the macro `include_simf` (in Nightly builds, run with -Z macro-backtrace for more info)
